log/build_2023-03-24_03-14-00/sample_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tony_stark/ros2_ws/install/sample_package/lib/python3.10/site-packages/sample_package/processing.py", line 11
    self.model=pickle.load(final_model 'rb')
                                       ^^^^
SyntaxError: invalid syntax

